# Student-Health-Prediction

./: .gitignore  README.md
IaC/: main.tf  sample.vars.tfvars  variables.tf
Notebooks/: exploratory-data-analysis.ipynb  train.py  train_model.ipynb
docker-images/: health.Dockerfile
models/: LogisticRegression.pkl  RandomForestClassifier.pkl  SVC.pkl
scripts/: build-docker-image.sh  start-local.sh
student-health-predictor-service/: app.py  pyproject.toml
student-health-predictor-service/tests/: sample_high.json  sample_low.json  sample_moderate.json  test_handler.py  test_prediction.py
